# codex-skin-studio

./: .gitignore  LICENSE  PRODUCT.md  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
scripts/: generate-updater-key.mjs  prepare-release-config.mjs  stop-stale-tauri-dev.mjs  verify-release-version.mjs
skills/generate-codex-theme/: SKILL.md
skills/generate-codex-theme/agents/: openai.yaml
skills/generate-codex-theme/references/: theme-schema.md  visual-qa.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: renderer-inject.js  renderer.css  theme-store-public.key
src-tauri/capabilities/: default.json  hanger.json
src-tauri/icons/codex-skin-studio/: icon.icns
src-tauri/src/: cdp.rs  engine.rs  error.rs  lib.rs  main.rs  models.rs  platform.rs  storage.rs  store.rs  themes.rs
src/components/: app-updater.tsx  appearance-toggle.tsx  codex-preview.tsx  native-theme-sync.tsx  theme-dna-easter-egg.tsx  theme-hanger.tsx  theme-store.tsx
src/components/studio/: skin-studio-app.tsx  theme-inspector.tsx  theme-library-panel.tsx  theme-settings.tsx
src/components/ui/: dialog.tsx  slider.tsx  sonner.tsx  switch.tsx
src/lib/: preview-elements.ts  theme-types.ts
