[package]
name = "codex-skin-studio"
version = "0.1.2"
description = "Cross-platform Codex desktop theme manager"
authors = ["Codex Skin Studio contributors"]
license = "MIT"
edition = "2024"

[lib]
name = "codex_skin_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
directories = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
tungstenite = "0.28"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "6", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
