[package]
name = "codex-skin-studio"
version = "0.2.0"
description = "Cross-platform Codex desktop theme manager"
authors = ["Codex Skin Studio contributors"]
license = "MIT"
edition = "2024"

[lib]
name = "codex_skin_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
directories = "6"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
thiserror = "2"
tungstenite = "0.28"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "6", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
